crates/parser/src/snapshots/parser__class__tests__module_jakarta.snap
---
source: crates/parser/src/class.rs
expression: result.unwrap()
---
ModuleInfo {
    exports: [
        "jakarta/inject",
        "jakarta/inject",
    ],
}
