crates/parser/src/snapshots/parser__class__tests__module_java_desktop.snap
---
source: crates/parser/src/class.rs
expression: result.unwrap()
---
ModuleInfo {
    exports: [
        "java/applet",
        "java/awt",
        "java/awt/color",
        "java/awt/desktop",
        "java/awt/dnd",
        "java/awt/event",
        "java/awt/font",
        "java/awt/geom",
        "java/awt/im",
        "java/awt/im/spi",
        "java/awt/image",
        "java/awt/image/renderable",
        "java/awt/print",
        "java/beans",
        "java/beans/beancontext",
        "javax/accessibility",
        "javax/imageio",
        "javax/imageio/event",
        "javax/imageio/metadata",
        "javax/imageio/plugins/bmp",
        "javax/imageio/plugins/jpeg",
        "javax/imageio/plugins/tiff",
        "javax/imageio/spi",
        "javax/imageio/stream",
        "javax/print",
        "javax/print/attribute",
        "javax/print/attribute/standard",
        "javax/print/event",
        "javax/sound",
        "javax/sound/midi",
        "javax/sound/midi/spi",
        "javax/sound/sampled",
        "javax/sound/sampled/spi",
        "javax/swing",
        "javax/swing/border",
        "javax/swing/colorchooser",
        "javax/swing/event",
        "javax/swing/filechooser",
        "javax/swing/plaf",
        "javax/swing/plaf/basic",
        "javax/swing/plaf/metal",
        "javax/swing/plaf/multi",
        "javax/swing/plaf/nimbus",
        "javax/swing/plaf/synth",
        "javax/swing/table",
        "javax/swing/text",
        "javax/swing/text/html",
        "javax/swing/text/html/parser",
        "javax/swing/text/rtf",
        "javax/swing/tree",
        "javax/swing/undo",
    ],
}
