crates/parser/src/snapshots/parser__class__tests__relative_source.snap
---
source: parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Everything",
    source: "/source/ch/emilycares/Everything.java",
    access: Access(
        0x0,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Everything",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: None,
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                0x0,
            ),
            name: Some(
                "method",
            ),
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "public_method",
            ),
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                Private,
            ),
            name: Some(
                "private_method",
            ),
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                0x0,
            ),
            name: Some(
                "out",
            ),
            parameters: [],
            throws: [],
            ret: Int,
            source: None,
        },
        Method {
            access: Access(
                0x0,
            ),
            name: Some(
                "add",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
                Parameter {
                    name: Some(
                        "b",
                    ),
                    jtype: Int,
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
        Method {
            access: Access(
                Static,
            ),
            name: Some(
                "sadd",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
                Parameter {
                    name: Some(
                        "b",
                    ),
                    jtype: Int,
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
    ],
    fields: [
        Field {
            access: Access(
                0x0,
            ),
            name: "noprop",
            jtype: Int,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "publicproperty",
            jtype: Int,
            source: None,
        },
        Field {
            access: Access(
                Private,
            ),
            name: "privateproperty",
            jtype: Int,
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
