crates/parser/src/snapshots/parser__class__tests__super_base.snap
---
source: crates/parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Super",
    source: None,
    access: Access(
        0x0,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Super",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: None,
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
    ],
    fields: [],
    super_class: ClassPath(
        "java.io.IOException",
    ),
    super_interfaces: [],
}
