crates/parser/src/snapshots/parser__class__tests__super_interfaces.snap
---
source: crates/parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.SuperInterface",
    source: None,
    access: Access(
        0x0,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.util.stream.Stream",
        ),
    ],
    name: "SuperInterface",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "stream",
            ),
            parameters: [],
            throws: [],
            ret: Generic(
                "java.util.stream.Stream",
                [
                    Parameter(
                        "E",
                    ),
                ],
            ),
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [
        Name(
            "Collection",
        ),
        Name(
            "List",
        ),
    ],
}
