crates/parser/src/snapshots/parser__class__tests__thrower.snap
---
source: crates/parser/src/class.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Thrower",
    source: None,
    access: Access(
        0x0,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Thrower",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: None,
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "ioThrower",
            ),
            parameters: [],
            throws: [
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "ioThrower",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
            ],
            throws: [
                Class(
                    "IOException",
                ),
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
